--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ssg-frontv2",
+  "name": "vuzix",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ssgfundacion.github.io/vuzix/",
